force-app/main/default/objects/Trail__c/fields/Distance__c.field-meta.xml
<CustomField>
    <fullName>Distance__c</fullName>
    <description>Distance</description>
    <inlineHelpText>Distance</inlineHelpText>
    <label>Distance</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>