force-app/main/default/objects/Trail__c/fields/Last_Inspection_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Inspection_Date__c</fullName>
    <description>Last Inspection Date</description>
    <inlineHelpText>Last Inspection Date</inlineHelpText>
    <label>Last Inspection Date</label>
    <type>DateTime</type>
</CustomField>